add mt st helens

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <a class="location" onclick="map.flyTo([26.5667,65.0077],9.51131)">Balochistan, Pakistan</a><br>
     <a class="location" onclick="map.flyTo([29.3709,5.2959],9.25714)">Issaouane Erg, Algeria</a><br>
     <a class="location" onclick="map.flyTo([36.2434,-112.2843],11.07228)">Grand Canyon, Arizona, USA</a><br>
+    <a class="location" onclick="map.flyTo([46.2051,-122.1737],13.21471)">Mt. St. Helens, Washington, USA</a><br>
     </div>
 </div>
 
