steal lou's thumbnailer

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
     <!-- Main demo code -->
     <script src="main.js"></script>
+    <script src="lib/thumbnail.js"></script>
 
     <!-- Mapzen map UI -->
     <script src='//mapzen.com/common/ui/mapzen-ui.min.js'></script>
