--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <!-- Main demo code -->
     <script src="main.js"></script>
     <script src="lib/thumbnail.js"></script>
+    <script src="lib/mapzen-api.js"></script>
 
     <!-- Mapzen map UI -->
     <script src='//mapzen.com/common/ui/mapzen-ui.min.js'></script>
