speed up example flytos

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
     <!-- locations pane -->
     <div id="locations">locations
     <hr>
-    <a class="location" onclick="map.flyTo([35.3624,138.7388],12.65879)">Mt. Fuji, Japan</a><br>
-    <a class="location" onclick="map.flyTo([45.9808,7.6595],12.35492)">Matterhorn</a><br>
-    <a class="location" onclick="map.flyTo([37.7393,-119.5929],13.17645)">Yosemite Valley, CA, USA</a><br>
-    <a class="location" onclick="map.flyTo([44.8535,-118.3326],9.90145)">Northeastern Oregon, USA</a><br>
-    <a class="location" onclick="map.flyTo([53.4419,54.5289],9.06812)">Western Bashkorotostan, Russia</a><br>
-    <a class="location" onclick="map.flyTo([19.4061,83.8115],11.29881)">Eastern Ghats, India</a><br>
-    <a class="location" onclick="map.flyTo([26.5667,65.0077],9.51131)">Balochistan, Pakistan</a><br>
-    <a class="location" onclick="map.flyTo([29.3709,5.2959],9.25714)">Issaouane Erg, Algeria</a><br>
-    <a class="location" onclick="map.flyTo([36.2434,-112.2843],11.07228)">Grand Canyon, Arizona, USA</a><br>
-    <a class="location" onclick="map.flyTo([46.2051,-122.1737],13.21471)">Mt. St. Helens, Washington, USA</a><br>
+    <a class="location" onclick="map.flyTo([35.3624,138.7388],12.65879,{duration: 1.5})">Mt. Fuji, Japan</a><br>
+    <a class="location" onclick="map.flyTo([45.9808,7.6595],12.35492,{duration: 1.5})">Matterhorn</a><br>
+    <a class="location" onclick="map.flyTo([37.7393,-119.5929],13.17645,{duration: 1.5})">Yosemite Valley, CA, USA</a><br>
+    <a class="location" onclick="map.flyTo([44.8535,-118.3326],9.90145,{duration: 1.5})">Northeastern Oregon, USA</a><br>
+    <a class="location" onclick="map.flyTo([53.4419,54.5289],9.06812,{duration: 1.5})">Western Bashkorotostan, Russia</a><br>
+    <a class="location" onclick="map.flyTo([19.4061,83.8115],11.29881,{duration: 1.5})">Eastern Ghats, India</a><br>
+    <a class="location" onclick="map.flyTo([26.5667,65.0077],9.51131,{duration: 1.5})">Balochistan, Pakistan</a><br>
+    <a class="location" onclick="map.flyTo([29.3709,5.2959],9.25714,{duration: 1.5})">Issaouane Erg, Algeria</a><br>
+    <a class="location" onclick="map.flyTo([36.2434,-112.2843],11.07228,{duration: 1.5})">Grand Canyon, Arizona, USA</a><br>
+    <a class="location" onclick="map.flyTo([46.2051,-122.1737],13.21471,{duration: 1.5})">Mt. St. Helens, Washington, USA</a><br>
     </div>
     <!-- API scenes pane -->
     <div id="scenespane">scenes
