--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
     <button class="kbutton" id="recordvideo" onclick="recordVideo();">RECORD VIDEO</button>
 
     <hr>
-    <div id="loginname">Nobody logged in</div>
+    <div id="loginname">Nobody logged in</div><button id="login" class="kbutton" onclick="login()">SIGN IN</button>
     <div id="account-actions">
     <button class="kbutton" onclick="togglePane('scenespane')">LOAD SCENE</button>
     <button class="kbutton" onclick="togglePane('scenespane', true);saveScene();">SAVE SCENE</button>
+    <button id="logout" class="kbutton" onclick="logout()">SIGN OUT</button>
     <button class="kbutton" onclick="get('/api/scenes/'+user.id, 'json', clearScenes);">DELETE ALL</button>
     </div>
 
