add tangram play signin flow

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <button class="kbutton" id="recordvideo" onclick="recordVideo();">RECORD VIDEO</button>
 
     <hr>
-    <div id="loginname">Nobody logged in</div><button id="login" class="kbutton" onclick="login()">SIGN IN</button>
+    <div id="loginname">Nobody logged in</div><button id="login" class="kbutton" onclick="openSignInWindow()">SIGN IN</button>
     <div id="account-actions">
     <button class="kbutton" onclick="togglePane('scenespane')">LOAD SCENE</button>
     <button class="kbutton" onclick="togglePane('scenespane', true);saveScene();">SAVE SCENE</button>
