--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     <!-- Main demo code -->
     <script src="lib/thumbnail.js"></script>
     <script src="lib/mapzen-api.js"></script>
+    <script src="lib/mapzen-api-integration.js"></script>
     <script src="main.js"></script>
 
     <!-- Mapzen map UI -->
