delete scene button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <button class="kbutton" onclick="togglePane('scenespane')">LOAD SCENE</button>
     <button class="kbutton" onclick="togglePane('scenespane', true);saveScene();">SAVE SCENE</button>
     <button id="logout" class="kbutton" onclick="logout()">SIGN OUT</button>
-    <button class="kbutton" onclick="get('/api/scenes/'+user.id, 'json', clearScenes);">DELETE ALL</button>
+    <!-- <button class="kbutton" onclick="get('/api/scenes/'+user.id, 'json', clearScenes);">DELETE ALL</button> -->
     </div>
 
     <!-- Hide blur image -->
