--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
     </div>
     <!-- API scenes pane -->
     <div class="clearfix">
-    <div id="scenespane">scenes
+    <div id="scenespane">scenes - click to load
     <hr>
-    click to load<br>
 
     <div id="scenes">
     <span class="scene">
