--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <!-- Main demo code -->
     <script src="lib/thumbnail.js"></script>
-    <script src="lib/mapzen-api.js"></script>
+    <script src="lib/mapzen-user-api.js"></script>
     <script src="lib/mapzen-api-integration.js"></script>
     <script src="main.js"></script>
 
