--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!-- BEGIN UI -->
 
 <!-- Hide default dropzone thumbnail -->
-<div id="preview-template" style="display: none;"></div>
+<div id="preview-template" style="display: none;"><div></div></div>
 
 <!-- <div id="save-dialog">SAVE SCENE</div> -->
 
