--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
     <script type="text/javascript" src="lib/color-thief.min.js"></script>
     <!-- FileSaver.js https://github.com/eligrey/FileSaver.js -->
     <script type="text/javascript" src="lib/FileSaver.min.js"></script>
+    <!-- yaml parser -->
+    <script type="text/javascript" src="lib/yaml.min.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.debug.js"></script>
 
     <!-- Main demo code -->
     <script src="lib/thumbnail.js"></script>
