--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="swatch" onclick="swatch(this)"></div>
         <div class="swatch" onclick="swatch(this)"></div>
     </div>
-    <button id="loadSwatches" class="kbutton" onclick="loadSwatches()">Reoad Color Swatches</button>
+    <!-- <button id="loadSwatches" class="kbutton" onclick="loadSwatches()">Reload Color Swatches</button> -->
     <div class="brushes">
         <div id="brush1" class="hitarea" onclick="updateWidth(10);updateAlpha(.2);switchBrush(this)"><button class="button-small"></button></div>
         <div id="brush2" class="hitarea" onclick="updateWidth(40);updateAlpha(.2);switchBrush(this)"><button class="button-big"></button></div>
@@ -188,6 +188,7 @@
 
     <!-- Main tangram library -->
     <script src="https://mapzen.com/tangram/tangram.debug.js"></script>
+    <!-- <script src="http://192.168.41.246:8000/dist/tangram.debug.js"></script> -->
 
     <!-- Main demo code -->
     <script src="lib/thumbnail.js"></script>
