--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div id="scenes">
     <span class="scene">
-        <a name="sample" onclick="loadScene(this)">
+        <a name="sample" class="scenes_link" onclick="loadScene(this)">
         sample
         <img class="thumbnail" src="">
         </a>
