--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
 
 <div id="panes">
     <!-- examples pane -->
+    <div id="help">Tangram Kinkade
+    <hr>
+<p>This is a spheremap painter. Draw in the box on the right to paint a spheremap, which will color the interactive map on the left.</p>
+
+<p><a href="">Spheremaps</a> are images used to color 3D geometry, as though they were wrapped around a sphere. Colors on the left side of the image will be the color of 3D faces which point left.</p>
+
+<p>Try the <a href="#" onclick="togglePane('examples')">example spheremaps</a> at various <a onclick="togglePane('locations')">sample locations</a>.</p>
+
+<p>The maps are drawn using the <a href="https://mapzen.com/products/tangram">Tangram</a> map library. Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p>
+
+<p>To read about how we use spheremaps in our <a href="https://mapzen.com/documentation/cartography/styles/#walkabout">Walkabout basemap</a>, read our blog post <a href="https://mapzen.com/blog/sphere-maps/">Sphere Maps.</a></p>
+
+<p>To learn more about using spheremaps in cartography, read out blog post <a href="https://mapzen.com/blog/mapping-mountains/">Mapping Mountains</a>.</p>
+
+    </div>
+
+    <!-- examples pane -->
     <div id="examples">examples
     <hr>
     <a onclick="swapimg(this)"><img class="example" src="examples/aurora.png"></a>
