remove sample scene span

--- a/index.html
+++ b/index.html
@@ -167,14 +167,7 @@ This tool uses the <a href="">sphere mapping</a> technique.</p>
     <div id="scenespane">scenes
     <hr>
 
-    <div id="scenes">
-    <span class="scene">
-        <a name="sample" onclick="loadScene(this)">
-        sample
-        <img class="thumbnail" src="">
-        </a>
-    </span>
-    </div>
+    <div id="scenes"></div>
 
     </div>
     </div>
