--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
 <p>Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p>
 
 <h3>How it works</h3>
-This tool uses the <a href="">sphere mapping</a> technique.</p>
-
-<p>In sphere mapping, an image (the "spheremap") is used to color 3D geometry, by treating the image as though it is wrapped around a sphere. Then, faces of the 3D object are assigned the same color as the faces on the imaginary sphere. For instance, the color on the left side of the spheremap will be the color of 3D faces which point left.</p>
+This tool uses a technique called sphere mapping. An image (the "spheremap") is used to color 3D geometry, by treating the image as though it is wrapped around a sphere. Then, faces of the 3D object are assigned the same color as parallel faces on the imaginary sphere. For instance, the color on the left side of the spheremap will be the color of 3D faces which point left.</p>
 
 <p>Using the <a href="https://mapzen.com/products/tangram">Tangram</a> map library, the <a href="https://mapzen.com/documentation/terrain-tiles/">Mapzen terrain tiles</a> are treated as though they are real 3D objects, and the spheremap technique can be applied to them too.
 
