--- a/index.html
+++ b/index.html
@@ -143,8 +143,15 @@ This tool uses a technique called sphere mapping. An image (the "spheremap") is 
     <a onclick="swapimg(this)"><img class="example" src="examples/emerald.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/treefrog.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/normals.jpg"></a>
-    <a onclick="swapimg(this)"><img class="example" src="examples/dorodango.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/slope.png"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/dorodango.png"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro2.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro3.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro4.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro5.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro6.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro7.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/doro8.jpg"></a>
     </div>
     <!-- locations pane -->
     <div id="locations">locations
