--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
     <br>
     Rotate:<br>
     <input class="slider" type="range" id="rotate" min="-360" max="360" value="0" step="1" oninput="updateRotate(this.value)" onChange="resetRotate()">
-    <hr>
+    <hr width="256px">
     <div id="webcamdiv">
-    Use Webcam: <input type="checkbox" id="webcam" onchange="useWebcam(this.checked)"><br>
-        <span id="flipspan" style="margin-left: 25px">Flip: <input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true"></span><br>
-        <button disabled="true" id="snapshot" onclick="saveCanvas()">Snapshot webcam</button>
+    <input type="checkbox" id="webcam" onchange="useWebcam(this.checked)">Webcam 
+    <span id="flipspan"><input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true">Flip <button disabled="true" id="snapshot" onclick="saveCanvas()">Snapshot</button></span>
     </div>
     Rewind:<br>
     <div id="rewindwrapper" class="rewindwrapper">
