--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <input type="checkbox" id="webcam" onchange="useWebcam(this.checked)">Webcam 
     <span id="flipspan"><input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true">Flip <button disabled="true" id="snapshot" onclick="saveCanvas()">Snapshot</button></span>
     </div>
+    <hr width="256px">
     Rewind:<br>
     <div id="rewindwrapper" class="rewindwrapper">
     <div id="ticks"></div>
