--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@ This tool uses a technique called sphere mapping. An image (the "spheremap") is 
     <!-- FileSaver.js https://github.com/eligrey/FileSaver.js -->
     <script type="text/javascript" src="lib/FileSaver.min.js"></script>
     <!-- yaml parser -->
-    <script type="text/javascript" src="lib/yaml.min.js"></script>
+    <!-- <script type="text/javascript" src="lib/yaml.min.js"></script> -->
+    <!-- <script type="text/javascript" src="lib/json2yaml.js"></script> -->
+    <script type="text/javascript" src="lib/yaml.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
