--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ This tool uses a technique called sphere mapping. An image (the "spheremap") is 
     <!-- yaml parser -->
     <!-- <script type="text/javascript" src="lib/yaml.min.js"></script> -->
     <!-- <script type="text/javascript" src="lib/json2yaml.js"></script> -->
-    <script type="text/javascript" src="lib/yaml.js"></script>
+    <!-- <script type="text/javascript" src="lib/yaml.js"></script> -->
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
