--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h3>To use</h3>
 <p>Draw in the pane on the right to paint a spheremap, which will color the interactive map on the left.</p>
 
-<p>Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> and enter an API key to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p>
+<p>Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p>
 
 <h3>How it works</h3>
 This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_mapping">sphere mapping</a>. An image (the "spheremap") is used to color 3D geometry, by treating the image as though it is wrapped around a sphere. Then, faces of the 3D object are assigned the same color as parallel faces on the imaginary sphere. For instance, the color on the left side of the spheremap will be the color of 3D faces which point left.</p>
