--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/tangram.debug.js"></script>
+    <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script> <!-- use NPM CDN -->
     <!-- <script src="http://192.168.41.246:8000/dist/tangram.debug.js"></script> -->
 
     <!-- Main demo code -->
