update scarab link to gh-pages (instead of mapzen)

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <script>
     var scarab = new MapzenScarab({
       name: 'Tangram Kinkade',
-      link: 'https://mapzen.com/tangram/kinkade',
+      link: 'https://tangrams.github.io/kinkade',
       tweet: 'Kinkade spheremap painter from @mapzen',
       repo: 'https://github.com/tangrams/kinkade/',
       description: 'A terrain map made with Tangram JS from Mapzen.'
