--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
     <h3>To use</h3>
 <p>Draw in the pane on the right to paint a spheremap, which will color the interactive map on the left.</p>
 
-<p>Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p>
+<!-- <p>Sign in with your <a href="https://mapzen.com/developers">Mapzen account</a> to save scenes, and then open and edit them in <a href="https://mapzen.com/tangram/play">Tangram Play</a>.</p> -->
 
 <h3>How it works</h3>
 This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_mapping">sphere mapping</a>. An image (the "spheremap") is used to color 3D geometry, by treating the image as though it is wrapped around a sphere. Then, faces of the 3D object are assigned the same color as parallel faces on the imaginary sphere. For instance, the color on the left side of the spheremap will be the color of 3D faces which point left.</p>
 
-<p>Using the <a href="https://mapzen.com/products/tangram">Tangram</a> map library, the <a href="https://mapzen.com/documentation/terrain-tiles/">Mapzen terrain tiles</a> are treated as though they are real 3D objects, and the spheremap technique can be applied to them too.
+<p>Using the <a href="http://github.co/tangrams//tangram">Tangram</a> map library, the <a href="https://www.nextzen.org/">Nextzen terrain tiles</a> are treated as though they are real 3D objects, and the spheremap technique can be applied to them too.
 
 <h3>Learn more</h3>
 
@@ -227,23 +227,8 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
 
     <!-- Main demo code -->
     <script src="lib/thumbnail.js"></script>
-    <script src="lib/mapzen-user-api.js"></script>
-    <script src="lib/mapzen-api-integration.js"></script>
-    <script src="lib/mz-scenes-signin.js"></script>
     <script src="main.js"></script>
 
-    <!-- Mapzen map UI -->
-    <!-- <script src='//mapzen.com/common/ui/mapzen-ui.min.js'></script> -->
-    <script src='lib/scarab/scarab.js'></script>
-    <script>
-    var scarab = new MapzenScarab({
-      name: 'Tangram Kinkade',
-      link: 'https://tangrams.github.io/kinkade',
-      tweet: 'Kinkade spheremap painter from @mapzen',
-      repo: 'https://github.com/tangrams/kinkade/',
-      description: 'A terrain map made with Tangram JS from Mapzen.'
-    });
-    </script>
     <!-- rewind wrapper style placeholder -->
     <style>
         #rewindwrapper {}
