--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <div id="map"></div>
 
     <!-- 3rd party libraries -->
+    <!-- leaflet -->
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <!-- bog-standard leaflet URL hash -->
     <script src="lib/leaflet-hash.js"></script>
@@ -213,10 +214,6 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <script type="text/javascript" src="lib/color-thief.min.js"></script>
     <!-- FileSaver.js https://github.com/eligrey/FileSaver.js -->
     <script type="text/javascript" src="lib/FileSaver.min.js"></script>
-    <!-- yaml parser -->
-    <!-- <script type="text/javascript" src="lib/yaml.min.js"></script> -->
-    <!-- <script type="text/javascript" src="lib/json2yaml.js"></script> -->
-    <!-- <script type="text/javascript" src="lib/yaml.js"></script> -->
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
