tweak webcam snapshot behavior

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <hr width="256px">
     <div id="webcamdiv">
     <input type="checkbox" id="webcam" onchange="useWebcam(this.checked)">Webcam 
-    <span id="flipspan"><input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true">Flip <button disabled="true" id="snapshot" onclick="saveCanvas()">Snapshot</button></span>
+    <span id="flipspan"><input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true">Flip <button disabled="true" id="snapshot" onclick="snapshot()">Snapshot</button></span>
     </div>
     <hr width="256px">
     Rewind:<br>
