load default spheremap

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <a onclick="swapimg(this)"><img class="example" src="examples/emerald.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/treefrog.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/normals.jpg"></a>
-    <a onclick="swapimg(this)"><img class="example" src="examples/slope.png"></a>
+    <a id="default" onclick="swapimg(this)"><img class="example" src="examples/slope.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/dorodango.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/doro2.jpg"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/doro3.jpg"></a>
