add mississippi location

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     <a class="location" onclick="map.flyTo([29.3709,5.2959],9.25714,{duration: 1.5})">Issaouane Erg, Algeria</a><br>
     <a class="location" onclick="map.flyTo([36.2434,-112.2843],11.07228,{duration: 1.5})">Grand Canyon, Arizona, USA</a><br>
     <a class="location" onclick="map.flyTo([46.2051,-122.1737],13.21471,{duration: 1.5})">Mt. St. Helens, Washington, USA</a><br>
+    <a class="location" onclick="map.flyTo([33.4393,-91.1579],11.50000,{duration: 1.5})">Mississippi Meanders</a><br>
     </div>
     <!-- API scenes pane -->
     <div class="clearfix">
