--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <hr>
     Presets:
-    <button class="kbutton" onclick="togglePane('examples')">Examples</button>
+    <button class="kbutton" onclick="togglePane('examples')">Images</button>
     <button class="kbutton" onclick="togglePane('locations')">Locations</button>
 
     <hr>
@@ -133,7 +133,7 @@ This tool uses a technique called <a href="https://en.wikipedia.org/wiki/Sphere_
     </div>
 
     <!-- examples pane -->
-    <div id="examples">examples
+    <div id="examples">example images
     <hr>
     <a onclick="swapimg(this)"><img class="example" src="examples/aurora.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/fivedots.png"></a>
